hphp/test/slow/expression_trees/blocks_yield.php.expectf
Fatal error: `yield` is not supported in expression trees. in %s/blocks_yield.php on line 12
